--- a/lib/skate_web/templates/page/index.html.eex
+++ b/lib/skate_web/templates/page/index.html.eex
@@ -1,1 +1,1 @@
-<div id="app" data-user-token="<%= assigns[:user_token] %>"></div>
+<div id="app" data-user-token="<%= assigns[:user_token] %>" data-laboratory-features="<%= Jason.encode!(assigns[:laboratory_features]) %>"></div>
