hide tab bar when route picker hidden

--- a/assets/css/_tab_bar.scss
+++ b/assets/css/_tab_bar.scss
@@ -10,6 +10,14 @@
   transition: left 0.2s ease-in-out;
   width: $tab-bar-width;
   z-index: 2;
+
+  &.visible {
+    left: 0;
+  }
+
+  &.hidden {
+    left: -$tab-bar-width;
+  }
 }
 
 .m-tab-bar__logo,
