--- a/assets/css/_vehicle_properties_panel.scss
+++ b/assets/css/_vehicle_properties_panel.scss
@@ -6,7 +6,7 @@
   overflow-y: scroll;
   position: fixed;
   right: 0;
-  top: inherit;
+  top: 0;
   width: 23.5rem;
   z-index: 1001;
 }
@@ -132,7 +132,7 @@
   height: 100%;
   left: inherit;
   position: fixed;
-  top: inherit;
+  top: 0;
   width: 100%;
   z-index: 1000;
 }
