stylize faq page

--- a/assets/css/_ui_kit.scss
+++ b/assets/css/_ui_kit.scss
@@ -201,3 +201,5 @@ input {
 // modals
 $modal-overlay-color: transparentize($color-component-dark, 0.8);
 $modal-box-shadow: 0 0 2rem 0 transparentize($black, 0.5);
+
+$subtle-box-shadow: 0 2px 4px 0 rgba(176, 181, 192, 0.5);
