--- a/assets/css/_faq.scss
+++ b/assets/css/_faq.scss
@@ -42,11 +42,8 @@
 }
 
 .m-faq__link {
-  background-color: $color-primary;
-  border-radius: 4px;
-  color: $white;
+  @include button-primary;
   display: block;
-  padding: 0.5rem;
   text-align: center;
   text-decoration: none;
 }
