--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -4,8 +4,8 @@ $tab-bar-width: 3rem;
 @import "inter_ui";
 @import "ui_kit";
 
+@import "about_page";
 @import "close_button";
-@import "faq";
 @import "incoming_box";
 @import "ladder";
 @import "page";
