add text-decoration: none to button-base mixin

--- a/assets/css/_ui_kit.scss
+++ b/assets/css/_ui_kit.scss
@@ -109,6 +109,7 @@ $color-line-gapped-light: #75e8ff;
   font-size: 0.8125rem;
   font-weight: 700;
   padding: 0.3125rem;
+  text-decoration: none;
 
   &:focus,
   &:hover {
