use mixin instead of component class

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -8,7 +8,7 @@ $tab-bar-width: 3rem;
 @import "close_button";
 @import "incoming_box";
 @import "ladder";
-@import "page";
+@import "ladder_page";
 @import "route_ladder";
 @import "route_ladders";
 @import "route_picker";
