--- a/assets/css/_headway_diagram.scss
+++ b/assets/css/_headway_diagram.scss
@@ -1,9 +1,9 @@
-.m-headawy-diagram {
+.m-headway-diagram {
   padding: 0.6875rem 0 0.45rem;
   position: relative;
 }
 
-.m-headawy-diagram__route-line-background {
+.m-headway-diagram__route-line-background {
   background-color: $color-line-normal;
   height: 4px;
   position: absolute;
@@ -12,24 +12,24 @@
   z-index: -1;
 }
 
-.m-headawy-diagram__vehicles {
+.m-headway-diagram__vehicles {
   display: flex;
   justify-content: center;
   margin: 0 2.1875rem;
 }
 
-.m-headawy-diagram__selected-vehicle {
+.m-headway-diagram__selected-vehicle {
   margin: 0 -0.4rem 0 -0.2rem;
   z-index: 2;
 }
 
-.m-headawy-diagram__other-vehicle {
+.m-headway-diagram__other-vehicle {
   cursor: pointer;
   margin: 6px -0.6rem 0 -0.4rem;
   z-index: 2;
 }
 
-.m-headawy-diagram__no-vehicle-icon {
+.m-headway-diagram__no-vehicle-icon {
   fill: $color-line-normal;
   margin: 2px -2px 0 -2px;
 
@@ -50,15 +50,15 @@
   }
 }
 
-.m-headawy-diagram__headway {
+.m-headway-diagram__headway {
   align-items: center;
   display: flex;
   flex-direction: column;
   margin-top: -6px;
 }
 
-.m-headawy-diagram__headway-amount,
-.m-headawy-diagram__headway-status {
+.m-headway-diagram__headway-amount,
+.m-headway-diagram__headway-status {
   color: $color-font-grey;
 
   .bunched & {
@@ -78,18 +78,18 @@
   }
 }
 
-.m-headawy-diagram__headway-amount {
+.m-headway-diagram__headway-amount {
   @include font-small;
   font-weight: bold;
   margin-bottom: 2px;
 }
 
-.m-headawy-diagram__headway-status {
+.m-headway-diagram__headway-status {
   font-size: 0.625rem;
   margin-top: 5px;
 }
 
-.m-headawy-diagram__headway-line {
+.m-headway-diagram__headway-line {
   background-color: $color-line-normal;
   height: 6px;
   width: 9rem;
