--- a/assets/css/_vehicle_properties_panel.scss
+++ b/assets/css/_vehicle_properties_panel.scss
@@ -90,7 +90,7 @@
   padding: 1rem;
 }
 
-.m-vehicle-properties-panel .m-headawy-diagram,
+.m-vehicle-properties-panel .m-headway-diagram,
 .m-vehicle-properties-panel__vehicle-properties {
   border-top: 1px solid $color-rule;
 }
