--- a/lib/skate_web/templates/layout/app.html.eex
+++ b/lib/skate_web/templates/layout/app.html.eex
@@ -10,11 +10,11 @@
 
     <title>Skate</title>
 
-    <link rel="apple-touch-icon" href="<%= Routes.static_path(@conn, "/images/mbta-logo-t-180.png") %>" type="image/png">
-    <link rel="icon" href="<%= Routes.static_path(@conn, "/images/mbta-logo-t-favicon.png") %>" sizes="32x32" type="image/png">
-    <link rel="icon" href="<%= Routes.static_path(@conn, "/favicon.ico") %>" sizes="16x16" type="image/vnd.microsoft.icon">
+    <link rel="apple-touch-icon" href="<%= Routes.static_url(@conn, "/images/mbta-logo-t-180.png") %>" type="image/png">
+    <link rel="icon" href="<%= Routes.static_url(@conn, "/images/mbta-logo-t-favicon.png") %>" sizes="32x32" type="image/png">
+    <link rel="icon" href="<%= Routes.static_url(@conn, "/favicon.ico") %>" sizes="16x16" type="image/vnd.microsoft.icon">
 
-    <link rel="stylesheet" href="<%= Routes.static_path(@conn, "/css/app.css") %>"/>
+    <link rel="stylesheet" href="<%= Routes.static_url(@conn, "/css/app.css") %>"/>
 
     <%= if record_fullstory?() do %>
       <%= render "_fullstory.html", assigns %>
@@ -25,6 +25,6 @@
     <main role="main" class="container">
       <%= render @view_module, @view_template, assigns %>
     </main>
-    <script type="text/javascript" src="<%= Routes.static_path(@conn, "/js/app.js") %>"></script>
+    <script type="text/javascript" src="<%= Routes.static_url(@conn, "/js/app.js") %>"></script>
   </body>
 </html>
