--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -6,6 +6,7 @@ $tab-bar-width: 3rem;
 
 @import "about_page";
 @import "close_button";
+@import "headway_diagram";
 @import "incoming_box";
 @import "ladder";
 @import "ladder_page";
