show layover vehicles on ladders

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -9,6 +9,7 @@ $tab-bar-width: 3rem;
 @import "incoming_box";
 @import "ladder";
 @import "ladder_page";
+@import "layover_box";
 @import "page";
 @import "route_ladder";
 @import "route_ladders";
