--- a/assets/css/_route_ladders.scss
+++ b/assets/css/_route_ladders.scss
@@ -5,7 +5,9 @@
   grid-template-rows:
     [m-route-ladder__header] minmax(auto, max-content)
     [m-route-ladder__controls] minmax(auto, max-content)
+    [m-layover-box--top] minmax(auto, max-content)
     [m-ladder] auto
+    [m-layover-box--bottom] minmax(auto, max-content)
     [m-incoming-box] max-content;
   height: 100vh;
   padding: 1rem 1rem 1rem 3rem;
