Add a vehicle label settings control
Add a Settings page.

Refactor out common page styles.

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -4,12 +4,12 @@ $tab-bar-width: 3rem;
 @import "inter_ui";
 @import "ui_kit";
 
-@import "about_page";
 @import "close_button";
 @import "headway_diagram";
 @import "incoming_box";
 @import "ladder";
 @import "ladder_page";
+@import "page";
 @import "route_ladder";
 @import "route_ladders";
 @import "route_picker";
