--- a/assets/css/_page.scss
+++ b/assets/css/_page.scss
@@ -1,20 +1,20 @@
-.m-about-page {
+.m-page {
   @include page;
   background: $color-bg-medium;
 }
 
-.m-about-page__container {
+.m-page__container {
   background: $color-bg-light;
   padding: 2rem;
   max-width: 30rem;
 }
 
-.m-about-page__title {
+.m-page__title {
   @include font-header;
   text-align: center;
 }
 
-.m-about-page__section {
+.m-page__section {
   background-color: $white;
   border-radius: 8px;
   box-shadow: $subtle-box-shadow;
@@ -22,13 +22,21 @@
   padding: 0.5rem 1rem;
 }
 
-.m-about-page__header {
+.m-page__header {
   @include font-emph;
   font-weight: bold;
 }
 
-.m-about-page__link {
+.m-page__link {
   @include button-primary;
   display: block;
   text-align: center;
+}
+
+.m-page__select {
+  background-color: $color-bg-base;
+  height: 2rem;
+  margin-bottom: 0.7rem;
+  padding-left: 0.4rem;
+  width: 28rem;
 }
