--- a/assets/css/_ui_kit.scss
+++ b/assets/css/_ui_kit.scss
@@ -30,8 +30,8 @@ $color-vehicle-normal-line: $color-component-light;
 $color-vehicle-ontime: #8bcf00;
 $color-vehicle-late: #46a5e7;
 $color-vehicle-early: $color-component-red;
-$color-vehicle-ghost: $color-bg-base;
-$color-vehicle-ghost-border: $color-component-dark;
+$color-vehicle-ghost: $white;
+$color-vehicle-ghost-border: $color-component-medium;
 $color-vehicle-nonrevenue: #8f7ed6;
 $color-vehicle-off-course: $color-component-dark;
 
