--- a/assets/css/_ladder.scss
+++ b/assets/css/_ladder.scss
@@ -50,6 +50,10 @@
       stroke: $color-secondary-light;
     }
 
+    .m-vehicle-icon__ghost-highlight {
+      stroke: $color-secondary-light;
+    }
+
     .m-vehicle-icon__label-background {
       fill: $color-secondary-light;
     }
@@ -57,6 +61,10 @@
 
   &.selected {
     .m-vehicle-icon__triangle {
+      stroke: $color-secondary-medium;
+    }
+
+    .m-vehicle-icon__ghost-highlight {
       stroke: $color-secondary-medium;
     }
 
