--- a/assets/css/_vehicle_properties_panel.scss
+++ b/assets/css/_vehicle_properties_panel.scss
@@ -117,6 +117,12 @@
   padding: 1rem;
 }
 
+.m-vehicle-properties-panel__timestamp {
+  @include font-small;
+  color: $color-font-grey;
+  float: right;
+}
+
 .m-vehicle-properties-panel__link {
   @include font-link;
 }
