--- a/assets/css/_page.scss
+++ b/assets/css/_page.scss
@@ -1,20 +1,20 @@
-.m-page {
+.c-page {
   @include page;
   background: $color-bg-medium;
 }
 
-.m-page__container {
+.c-page__container {
   background: $color-bg-light;
   padding: 2rem;
   max-width: 30rem;
 }
 
-.m-page__title {
+.c-page__title {
   @include font-header;
   text-align: center;
 }
 
-.m-page__section {
+.c-page__section {
   background-color: $white;
   border-radius: 8px;
   box-shadow: $subtle-box-shadow;
@@ -22,18 +22,18 @@
   padding: 0.5rem 1rem;
 }
 
-.m-page__header {
+.c-page__header {
   @include font-emph;
   font-weight: bold;
 }
 
-.m-page__link {
+.c-page__link {
   @include button-primary;
   display: block;
   text-align: center;
 }
 
-.m-page__select {
+.c-page__select {
   background-color: $color-bg-base;
   height: 2rem;
   margin-bottom: 0.7rem;
