--- a/assets/css/_vehicle_properties_panel.scss
+++ b/assets/css/_vehicle_properties_panel.scss
@@ -117,6 +117,8 @@
   padding: 1rem;
 }
 
+// Not in use temporarily - will be used once we have a current location and
+// can move the "seconds ago" timestamp back up to the top-right. --MSS 2019-08-16
 .m-vehicle-properties-panel__timestamp {
   @include font-small;
   color: $color-font-grey;
