consolidate vehicle statuses
* add status to VehicleIcon props
* check if headways are on when making ladderVehicle status instead of after
* DrawnStatus type
* consolidate helper functions in vehicleStatus.ts
* move scheduleAdherenceStatus from vehicle fields to helper function
* map doesn't use vpp class

--- a/assets/css/_vehicle_map.scss
+++ b/assets/css/_vehicle_map.scss
@@ -14,6 +14,19 @@
 .m-vehicle-map__icon {
   path {
     fill: $color-primary;
+
+    &.on-time {
+      fill: $color-vehicle-ontime;
+    }
+    &.early {
+      fill: $color-vehicle-early;
+    }
+    &.late {
+      fill: $color-vehicle-late;
+    }
+    &.off-course {
+      fill: $color-vehicle-off-course;
+    }
   }
 
   svg {
