Fix how we set height of ladder SVG
Make incoming box stretch to encompass all content.

--- a/assets/css/_ladder.scss
+++ b/assets/css/_ladder.scss
@@ -1,10 +1,12 @@
 .m-ladder {
   grid-row-start: m-ladder;
   margin: 0 auto;
+  position: relative;
 }
 
 .m-ladder__svg {
   display: block;
+  position: absolute;
 }
 
 .m-ladder__line {
