--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -12,6 +12,7 @@ $tab-bar-width: 3rem;
 @import "ladder_page";
 @import "layover_box";
 @import "page";
+@import "picker_container";
 @import "route_ladder";
 @import "route_ladders";
 @import "route_picker";
