Show properties panel when you select a vehicle on the map
Highlight the selected vehicle on the map.

Don't show the map in the properties panel for a shuttle.

--- a/assets/css/_shuttle_map.scss
+++ b/assets/css/_shuttle_map.scss
@@ -1,4 +1,8 @@
 .m-shuttle-map__map {
   position: fixed;
   right: 0;
+
+  .m-vehicle-map__label.selected .m-vehicle-icon__label-background {
+    fill: $color-secondary-medium;
+  }
 }
