--- a/assets/css/_vehicle_properties_panel.scss
+++ b/assets/css/_vehicle_properties_panel.scss
@@ -1,6 +1,8 @@
 .m-vehicle-properties-panel {
   background-color: $color-bg-base;
   box-shadow: $modal-box-shadow;
+  display: flex;
+  flex-direction: column;
   height: 100%;
   max-width: 100%;
   overflow-y: scroll;
@@ -114,6 +116,9 @@
 
 .m-vehicle-properties-panel__location {
   border-top: 1px solid $color-rule;
+  display: flex;
+  flex: 1 1 auto;
+  flex-direction: column;
   padding: 1rem;
 }
 
