Use only username for identifying users in FullStory
User IDs should be consistent between page loads.

--- a/lib/skate_web/templates/layout/_fullstory.html.eex
+++ b/lib/skate_web/templates/layout/_fullstory.html.eex
@@ -16,7 +16,7 @@ window['_fs_namespace'] = 'FS';
     g.clearUserCookie=function(){};
 })(window,document,window['_fs_namespace'],'script','user');
 
-<%= if @user_info do %>
-  window.userInfo = <%= @user_info |> Jason.encode!() |> Phoenix.HTML.raw() %>
+<%= if @username do %>
+  window.username = <%= @username %>
 <% end %>
 </script>
