--- a/lib/skate_web/templates/layout/_fullstory.html.eex
+++ b/lib/skate_web/templates/layout/_fullstory.html.eex
@@ -17,6 +17,6 @@ window['_fs_namespace'] = 'FS';
 })(window,document,window['_fs_namespace'],'script','user');
 
 <%= if @username do %>
-  window.username = <%= @username %>
+  window.username = "<%= @username %>"
 <% end %>
 </script>
