Show lines for subway routes on the shuttle map
Add hard-coded subway line buttons and shape data since we don't ingest
subway GTFS data.

--- a/assets/css/_vehicle_map.scss
+++ b/assets/css/_vehicle_map.scss
@@ -33,10 +33,10 @@
 }
 
 .m-vehicle-map__route-shape {
-  stroke: $color-map-route-shape;
+  opacity: 0.6;
   stroke-width: 6px;
 
   &:hover {
-    stroke: $color-map-route-shape-selected;
+    opacity: 1;
   }
 }
