Use css for hover change

--- a/assets/css/_vehicle_map.scss
+++ b/assets/css/_vehicle_map.scss
@@ -36,7 +36,7 @@
   stroke: $color-map-route-shape;
   stroke-width: 6px;
 
-  &.selected {
+  &:hover {
     stroke: $color-map-route-shape-selected;
   }
 }
