--- a/assets/css/_route_picker.scss
+++ b/assets/css/_route_picker.scss
@@ -31,6 +31,8 @@
 }
 
 .m-route-picker__route-list-button {
+  display: flex;
+  justify-content: start;
   margin-bottom: 0.25rem;
   width: 100%;
   word-break: break-word;
@@ -45,5 +47,31 @@
 
   &--disabled {
     @include button-disabled;
+  }
+
+  &--selected,
+  &--unselected,
+  &--disabled {
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+  }
+}
+
+.m-route-picker__route-list-button-name {
+  flex: 1 1 auto;
+  text-align: left;
+}
+
+.m-route-picker__route-list-button-count {
+  border-left: 1px solid $color-bg-medium;
+  color: $color-font-grey;
+  display: inline-block;
+  flex: 0 0 auto;
+  font-weight: normal;
+  margin-left: 0.5rem;
+  padding-left: 0.3125rem;
+
+  .m-route-picker__route-list-button--selected & {
+    color: $color-font-light;
   }
 }
