Turn PP close button into a component

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -15,6 +15,7 @@ $tab-bar-width: 3rem;
 @import "page";
 @import "picker_container";
 @import "properties_panel";
+@import "properties_panel_close_button";
 @import "properties_panel_header";
 @import "route_ladder";
 @import "route_ladders";
