Turn properties list into a shared component

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -17,6 +17,7 @@ $tab-bar-width: 3rem;
 @import "properties_panel";
 @import "properties_panel_close_button";
 @import "properties_panel_header";
+@import "properties_panel_properties_list";
 @import "route_ladder";
 @import "route_ladders";
 @import "route_picker";
