Nest scss files

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -15,9 +15,9 @@ $tab-bar-width: 3rem;
 @import "page";
 @import "picker_container";
 @import "properties_panel";
-@import "properties_panel_close_button";
-@import "properties_panel_header";
-@import "properties_panel_properties_list";
+@import "properties_panel/close_button";
+@import "properties_panel/header";
+@import "properties_panel/properties_list";
 @import "route_ladder";
 @import "route_ladders";
 @import "route_picker";
