Draw stop circles along with route lines

--- a/assets/css/_ui_kit.scss
+++ b/assets/css/_ui_kit.scss
@@ -48,6 +48,9 @@ $color-line-bunched-light: #ffcce9;
 $color-line-gapped: #00c6ed;
 $color-line-gapped-light: #75e8ff;
 
+$color-stop-fill: $white;
+$color-stop-stroke: #4db6ac;
+
 // type styles
 
 @mixin font-header-big {
