Update the stop circle stroke color

--- a/assets/css/_ui_kit.scss
+++ b/assets/css/_ui_kit.scss
@@ -49,7 +49,7 @@ $color-line-gapped: #00c6ed;
 $color-line-gapped-light: #75e8ff;
 
 $color-stop-fill: $white;
-$color-stop-stroke: $color-secondary-dark;
+$color-stop-stroke: $black;
 
 // type styles
 
