Show lines for subway routes on the shuttle map (#210)
Add hard-coded subway line buttons and shape data since we don't ingest
subway GTFS data.

--- a/assets/css/_ui_kit.scss
+++ b/assets/css/_ui_kit.scss
@@ -48,8 +48,8 @@ $color-line-bunched-light: #ffcce9;
 $color-line-gapped: #00c6ed;
 $color-line-gapped-light: #75e8ff;
 
-$color-map-route-shape: transparentize($color-secondary-dark, 0.4);
-$color-map-route-shape-selected: $color-secondary-dark;
+$color-stop-fill: $white;
+$color-stop-stroke: $black;
 
 // type styles
 
