--- a/assets/css/_ui_kit.scss
+++ b/assets/css/_ui_kit.scss
@@ -151,6 +151,7 @@ $color-stop-stroke: $black;
 @mixin button-secondary {
   @include button-base;
   background-color: $color-button-secondary;
+  color: $color-font-light;
 }
 
 @mixin button-disabled {
