--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -25,6 +25,7 @@ $picker-width-wide: $picker-width-narrow + 2.6;
 @import "route_ladders";
 @import "route_picker";
 @import "route_filter";
+@import "search_form";
 @import "shuttle_map";
 @import "tab_bar";
 @import "vehicle_icon";
