--- a/assets/css/_shuttle_map.scss
+++ b/assets/css/_shuttle_map.scss
@@ -1,6 +1,7 @@
 .m-shuttle-map__map {
+  height: 100vh;
   position: fixed;
-  right: 0;
+  width: 100vw;
 
   .m-vehicle-map__label.selected .m-vehicle-icon__label-background {
     fill: $color-secondary-medium;
