--- a/assets/css/_route_ladders.scss
+++ b/assets/css/_route_ladders.scss
@@ -10,10 +10,5 @@
     [m-layover-box--bottom] minmax(auto, max-content)
     [m-incoming-box] max-content;
   height: 100vh;
-  padding: 1rem 1rem 1rem 3rem;
-  transition: padding-left 0.2s ease-in-out;
-
-  .m-picker-container.visible + & {
-    padding-left: 12.5rem;
-  }
+  padding: 1rem;
 }
