--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -1,4 +1,6 @@
 $tab-bar-width: 3rem;
+$picker-width-narrow: 9.5rem;
+$picker-width-wide: $picker-width-narrow + 2.6;
 
 @import "base";
 @import "inter_ui";
