--- a/assets/css/_search_form.scss
+++ b/assets/css/_search_form.scss
@@ -35,6 +35,7 @@
 
 .m-search-form__property-label {
   @include button-simple;
+  cursor: pointer;
   padding-left: 0.8125rem;
   padding-right: 0.8125rem;
   text-transform: uppercase;
