Add a Recent Searches section to the search page
Leave it blank for now, it will be populated in the future:
https://app.asana.com/0/1112935048846093/1139512810293672

--- a/assets/css/_search_form.scss
+++ b/assets/css/_search_form.scss
@@ -1,7 +1,8 @@
 .m-search-form {
   background-color: $color-bg-base;
   border-bottom: 1px solid $white;
-  padding: 1rem 1.1875rem;
+  padding: 1rem 1.1875rem 0;
+  width: 22rem;
 }
 
 .m-search-form__text {
