--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -21,11 +21,13 @@ $picker-width-wide: $picker-width-narrow + 2.6;
 @import "properties_panel/headway_diagram";
 @import "properties_panel/properties_list";
 @import "properties_panel/vehicle_properties_panel";
+@import "recent_searches";
 @import "route_ladder";
 @import "route_ladders";
 @import "route_picker";
 @import "route_filter";
 @import "search_form";
+@import "search_page";
 @import "shuttle_map";
 @import "tab_bar";
 @import "vehicle_icon";
