--- a/assets/css/_search_page.scss
+++ b/assets/css/_search_page.scss
@@ -4,7 +4,7 @@
   width: 100vw;
 }
 
-.m-search-controls {
+.m-search-page__controls {
   display: flex;
   flex-direction: column;
   height: 100vh;
