Set width on controls component

--- a/assets/css/_search_form.scss
+++ b/assets/css/_search_form.scss
@@ -2,7 +2,7 @@
   background-color: $color-bg-base;
   border-bottom: 1px solid $white;
   padding: 1rem 1.1875rem 0;
-  width: 22rem;
+  width: 100%;
 }
 
 .m-search-form__text {
