--- a/assets/css/_recent_searches.scss
+++ b/assets/css/_recent_searches.scss
@@ -2,7 +2,7 @@
   background-color: $color-bg-base;
   flex: 1 1 auto;
   padding: 1.5rem 1.1875rem;
-  width: 22rem;
+  width: 100%;
 }
 
 .m-recent-searches__heading {
