--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -28,6 +28,7 @@ $picker-width-wide: $picker-width-narrow + 2.6;
 @import "route_filter";
 @import "search_form";
 @import "search_page";
+@import "search_results";
 @import "shuttle_map";
 @import "tab_bar";
 @import "vehicle_icon";
