--- a/assets/css/_properties_panel.scss
+++ b/assets/css/_properties_panel.scss
@@ -14,6 +14,10 @@
   z-index: 1001;
 }
 
+.m-properties-panel .m-properties-panel__properties-list {
+  border-top: 1px solid $color-rule;
+}
+
 .m-properties-panel__modal-overlay {
   background-color: $modal-overlay-color;
   height: 100%;
