--- a/assets/css/_ui_kit.scss
+++ b/assets/css/_ui_kit.scss
@@ -33,6 +33,7 @@ $color-font-grey: $color-component-medium;
 $color-font-link: $color-secondary-dark;
 $color-font-light: $white;
 $color-font-warning: $color-component-red;
+$color-font-note: #788093;
 
 $color-rule: $color-component-light;
 
@@ -115,6 +116,11 @@ $color-stop-stroke: $black;
   font-weight: 700;
 }
 
+@mixin font-note {
+  color: $color-font-note;
+  font-weight: 400;
+}
+
 // button styles
 
 @mixin button-base {
@@ -195,6 +201,21 @@ $color-stop-stroke: $black;
       stroke: currentColor;
       fill: currentColor;
     }
+  }
+}
+
+@mixin button-text {
+  background: transparent;
+  color: $color-button-secondary;
+  cursor: pointer;
+  font-size: 0.8125rem;
+  font-weight: 500;
+  padding: 0;
+  text-decoration: none;
+
+  &:focus,
+  &:hover {
+    color: $color-primary;
   }
 }
 
