--- a/assets/css/_search_results.scss
+++ b/assets/css/_search_results.scss
@@ -25,6 +25,20 @@
   .highlighted {
     background-color: $color-secondary-light;
   }
+
+  .m-properties-panel__properties-list {
+    padding: 1rem 1rem 0.5rem;
+  }
+}
+
+.m-search-result-card__route-label {
+  color: $color-font-grey;
+  font-size: 0.75rem;
+  padding: 0 1rem 1rem;
+
+  .m-route-variant-name__route-id {
+    font-weight: bold;
+  }
 }
 
 .m-search-results__list .m-search-results__note {
