--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -14,12 +14,12 @@ $picker-width-wide: $picker-width-narrow + 2.6;
 @import "layover_box";
 @import "page";
 @import "picker_container";
+@import "properties_list";
 @import "properties_panel";
 @import "properties_panel/close_button";
 @import "properties_panel/ghost_properties_panel";
 @import "properties_panel/header";
 @import "properties_panel/headway_diagram";
-@import "properties_panel/properties_list";
 @import "properties_panel/vehicle_properties_panel";
 @import "recent_searches";
 @import "route_ladder";
