--- a/assets/css/_properties_panel.scss
+++ b/assets/css/_properties_panel.scss
@@ -14,7 +14,7 @@
   z-index: 1001;
 }
 
-.m-properties-panel .m-properties-panel__properties-list {
+.m-properties-panel .m-properties-list {
   border-top: 1px solid $color-rule;
 }
 
