--- a/assets/css/_search_results.scss
+++ b/assets/css/_search_results.scss
@@ -26,7 +26,7 @@
     background-color: $color-secondary-light;
   }
 
-  .m-properties-panel__properties-list {
+  .m-properties-list {
     padding: 1rem 1rem 0.5rem;
   }
 }
