--- a/assets/css/properties_panel/_ghost_properties_panel.scss
+++ b/assets/css/properties_panel/_ghost_properties_panel.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
   height: 100%;
 
-  .m-properties-panel__properties-list {
+  .m-properties-list {
     flex: 1 0 auto;
   }
 }
