Move highlighted style to property list file

--- a/assets/css/_properties_list.scss
+++ b/assets/css/_properties_list.scss
@@ -12,4 +12,8 @@
 .m-properties-list__property-value {
   @include font-body;
   margin-bottom: 1rem;
+
+  .highlighted {
+    background-color: $color-secondary-light;
+  }
 }
