Fix layout of search form

--- a/assets/css/_search_form.scss
+++ b/assets/css/_search_form.scss
@@ -3,8 +3,12 @@
   width: 100%;
 }
 
+.m-search-form__row {
+  display: flex;
+}
+
 .m-search-form__text {
-  width: 19rem;
+  flex: 1 0 auto;
 }
 
 .m-search-form__submit {
